layout: fix button alignment, user buttons now spaced correctly

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,10 @@
     background-color: #3b5998;
     border-color: transparent;
     color: #fff;
-    margin: 10px;
+
+    &.user-buttons {
+      margin: 10px;
+    }
 }
 
 
